EXCEPTION_INT_DIVIDE_BY_ZERO when Viewport Rending an image using EEVEE. #85714

Closed
opened 2021-02-16 23:40:35 +01:00 by Evan Wilson · 3 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-16 11:30, hash: 5688f791f5
I haven't bisected but the code was added in 000a340afa
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when viewport rendering an image or animation using EEVEE due to timesteps being zero in EEVEE_temporal_sampling_sample_count_get in eevee_temporal_sampling.c The division call that occurs next doesn't go so well.

	at C:\blender-git\blender\source\blender\blenlib\intern\math_base_inline.c(366)
Stack trace:
blender.exe         :0x00007FF69D552700  EEVEE_temporal_sampling_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_temporal_sampling.c:292
blender.exe         :0x00007FF69D51B430  EEVEE_effects_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_effects.c:101
blender.exe         :0x00007FF69D51D4E0  eevee_engine_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_engine.c:88
blender.exe         :0x00007FF69D507AB0  drw_engines_init C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1026
blender.exe         :0x00007FF69D5040D0  DRW_draw_render_loop_ex C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1587
blender.exe         :0x00007FF69D504580  DRW_draw_render_loop_offscreen C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1706
blender.exe         :0x00007FF69DC7C070  ED_view3d_draw_offscreen C:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1764
blender.exe         :0x00007FF69DC7C4C0  ED_view3d_draw_offscreen_imbuf C:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:2001
blender.exe         :0x00007FF69E0C8BE0  screen_opengl_render_doit C:\blender-git\blender\source\blender\editors\render\render_opengl.c:371
blender.exe         :0x00007FF69E0C8920  screen_opengl_render_apply C:\blender-git\blender\source\blender\editors\render\render_opengl.c:512
blender.exe         :0x00007FF69E0C9B10  screen_opengl_render_modal C:\blender-git\blender\source\blender\editors\render\render_opengl.c:1235
blender.exe         :0x00007FF69D43E100  wm_handler_operator_call C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2069
blender.exe         :0x00007FF69D43F090  wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2868
blender.exe         :0x00007FF69D43E6E0  wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2911
blender.exe         :0x00007FF69D43BBD0  wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:3334
blender.exe         :0x00007FF69D427320  WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:640
blender.exe         :0x00007FF69D10C0C0  main C:\blender-git\blender\source\creator\creator.c:527
blender.exe         :0x00007FF6A1785678  __scrt_common_main_seh d:\agent\_work\63\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFD8AE47020  BaseThreadInitThunk
ntdll.dll           :0x00007FFD8C99D220  RtlUserThreadStart```


**Exact steps for others to reproduce the error**


  - Factory Startup
  - Set the Viewport Shading to `Material Preview` or `Rendered`
  # `3D Viewport ‣ View ‣ Viewport Render Image` or `3D Viewport ‣ View ‣ Viewport Render Animation`





{F9810016}
{F9810015}


{F9809996}
{F9810004}

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-16 11:30, hash: `5688f791f5` I haven't bisected but the code was added in 000a340afa Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when viewport rendering an image or animation using EEVEE due to `timesteps` being zero in `EEVEE_temporal_sampling_sample_count_get` in `eevee_temporal_sampling.c` The division call that occurs next doesn't go so well. ```blender.exe!divide_ceil_u(unsigned int a=0x00000040, unsigned int b=0x00000000) Line 366 at C:\blender-git\blender\source\blender\blenlib\intern\math_base_inline.c(366) ``` ```lines Stack trace: blender.exe :0x00007FF69D552700 EEVEE_temporal_sampling_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_temporal_sampling.c:292 blender.exe :0x00007FF69D51B430 EEVEE_effects_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_effects.c:101 blender.exe :0x00007FF69D51D4E0 eevee_engine_init C:\blender-git\blender\source\blender\draw\engines\eevee\eevee_engine.c:88 blender.exe :0x00007FF69D507AB0 drw_engines_init C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1026 blender.exe :0x00007FF69D5040D0 DRW_draw_render_loop_ex C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1587 blender.exe :0x00007FF69D504580 DRW_draw_render_loop_offscreen C:\blender-git\blender\source\blender\draw\intern\draw_manager.c:1706 blender.exe :0x00007FF69DC7C070 ED_view3d_draw_offscreen C:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:1764 blender.exe :0x00007FF69DC7C4C0 ED_view3d_draw_offscreen_imbuf C:\blender-git\blender\source\blender\editors\space_view3d\view3d_draw.c:2001 blender.exe :0x00007FF69E0C8BE0 screen_opengl_render_doit C:\blender-git\blender\source\blender\editors\render\render_opengl.c:371 blender.exe :0x00007FF69E0C8920 screen_opengl_render_apply C:\blender-git\blender\source\blender\editors\render\render_opengl.c:512 blender.exe :0x00007FF69E0C9B10 screen_opengl_render_modal C:\blender-git\blender\source\blender\editors\render\render_opengl.c:1235 blender.exe :0x00007FF69D43E100 wm_handler_operator_call C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2069 blender.exe :0x00007FF69D43F090 wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2868 blender.exe :0x00007FF69D43E6E0 wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:2911 blender.exe :0x00007FF69D43BBD0 wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c:3334 blender.exe :0x00007FF69D427320 WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:640 blender.exe :0x00007FF69D10C0C0 main C:\blender-git\blender\source\creator\creator.c:527 blender.exe :0x00007FF6A1785678 __scrt_common_main_seh d:\agent\_work\63\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFD8AE47020 BaseThreadInitThunk ntdll.dll :0x00007FFD8C99D220 RtlUserThreadStart``` **Exact steps for others to reproduce the error** - Factory Startup - Set the Viewport Shading to `Material Preview` or `Rendered` # `3D Viewport ‣ View ‣ Viewport Render Image` or `3D Viewport ‣ View ‣ Viewport Render Animation` {F9810016} {F9810015} {F9809996} {F9810004}
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW

This issue was referenced by 4dd782a1a3

This issue was referenced by 4dd782a1a39572a0515c076341f538a288226ded

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2021-02-21 01:53:56 +01:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85714
No description provided.