Fix T85714 Crash when Viewport Rending an image using EEVEE.

Was caused by non initialized render_timesteps.